feat: adding first section

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
                 Categories
             </div>
             <form class="nav-elem nav-search">
-                <input class="search-bar" type="search" placeholder="Search for anything">
                 <button class="search-button" type="submit"><img src="../img/search-icon.svg"></button>
+                <input class="search-bar" type="search" placeholder="Search for anything">
             </form>
             <div class="nav-elem nav-links">
                 Udemy Business
@@ -40,6 +40,13 @@
             <div class="nav-elem nav-lang">
                 <img class="nav-lang-img" src="../img/language.png">
             </div>
-        </nav>   
+        </nav>
+        <section class="section01">
+            <div class="section01 section01-1">
+                <h1><b>New to Udemy? Lucky you.</b></h1>
+                <h3>Courses start at E£169.99.Get your new-student offer befort it expires.</h3>
+            </div>
+            <img class="sction01 section01-2" src="../img/alarm.png" alt="alarm image">
+        </section>
     </body>
 </html>
