feat: adding python courses section
feat: adding responsiveness with different screen sizes

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
         <title>Online Courses - Learn Anything, On Your Schedule | Udemy</title>
         <meta name="viewport" content="width=device-width", initial-scale=1.0>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -15,6 +16,7 @@
             <div class = "nav-elem nav-logo">
                 <img class="nav-logo-img" src="../img/logo-udemy.svg" alt="udemy">
             </div>
+            <button class="search-button hidden" type="submit"><img src="../img/search-icon.svg"></button>
             <div class="nav-elem nav-links">
                 Categories
             </div>
@@ -47,6 +49,107 @@
                 <h3>Courses start at E£169.99.Get your new-student offer befort it expires.</h3>
             </div>
             <img class="sction01 section01-2" src="../img/alarm.png" alt="alarm image">
+        </section>
+        <section class="section02">
+            <h1>A broad selection of courses</h1>
+            <h4>Choose from 185,000 online video courses with new additions published every month</h4>
+            <div class="python-courses">
+                <h2 class="section-description">Expand your career opportunities with Python</h2>
+                <p class="section-description">
+                    Take one of Udemy's range of Python courses and learn how to code using this 
+                    incredibly useful language. Its simple syntax and readability makes Python perfect 
+                    for Flask, Django, data science, and machine learning. You'll learn how to build 
+                    everything from games to sites to apps. Choose from a range of courses that will appeal to
+                </p>
+                <button class="explore" type="button"><b>Explore Python</b></button>
+                <div class="courses-preview">
+                    <div class="course-preview">
+                        <div class="course-img">
+                            <img src="https://img-c.udemycdn.com/course/240x135/394676_ce3d_5.jpg" alt="Learn Python: The Complete Python Programming Course">
+                        </div>
+                        <h4 class="course-title">Learn Python: The Complete Python Programming Course</h4>
+                        <p class="course-author">Avinash Jain, The Codex</p>
+                        <div calss="course-rating">
+                            <span class="stars">4.4</span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star-half-full checked"></span>
+                            <span class="grey">(2,916)</span>
+                        </div>
+                        <span class="price">E£679.99</span>
+                    </div>
+                    <div class="course-preview">
+                        <div class="course-img">
+                            <img src="https://img-c.udemycdn.com/course/240x135/396876_cc92_7.jpg" alt="Learning Python for Data Analysis and Visualization">
+                        </div>
+                        <h4 class="course-title">Learning Python for Data Analysis and Visualization</h4>
+                        <p class="course-author">Jose Portilla</p>
+                        <div calss="course-rating">
+                            <span class="stars">4.4</span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star-half-full checked"></span>
+                            <span class="grey">(17,984)</span>
+                        </div>
+                        <span class="price">E£1,599.99</span>
+                    </div>
+                    <div class="course-preview">
+                        <div class="course-img">
+                            <img src="https://img-c.udemycdn.com/course/240x135/405878_e5a0_3.jpg" alt="Python for Beginners - Learn Programming from scratch">
+                        </div>
+                        <h4 class="course-title">Python for Beginners - Learn Programming from scratch</h4>
+                        <p class="course-author">Edwin Diaz, Coding Faculty Solutions</p>
+                        <div calss="course-rating">
+                            <span class="stars">4.4</span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star-half-full checked"></span>
+                            <span class="grey">(17,666)</span>
+                        </div>
+                        <span class="price">E£679.99</span>
+                    </div>
+                    <div class="course-preview">
+                        <div class="course-img">
+                            <img src="https://img-c.udemycdn.com/course/240x135/426570_1b91_3.jpg" alt="Learn Python: Python for Beginners">
+                        </div>
+                        <h4 class="course-title">Learn Python: Python for Beginners</h4>
+                        <p class="course-author">Abrar Hussain</p>
+                        <div calss="course-rating">
+                            <span class="stars">4.3</span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star-half-full checked"></span>
+                            <span class="grey">(2,7667)</span>
+                        </div>
+                        <span class="price">E£319.99</span>
+                    </div>
+                    <div class="course-preview">
+                        <div class="course-img">
+                            <img src="https://img-c.udemycdn.com/course/240x135/449532_2aa9_7.jpg" alt="Python Beyond the Basics - Object-Oriented Programming">
+                        </div>
+                        <h4 class="course-title">Python Beyond the Basics - Object-Oriented Programming</h4>
+                        <p class="course-author">Infinite Skills</p>
+                        <div calss="course-rating">
+                            <span class="stars">4.4</span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star-half-full checked"></span>
+                            <span class="grey">(2,929)</span>
+                        </div>
+                        <span class="price">E£519.99</span>
+                    </div>
+                </div>
+            </div>
         </section>
     </body>
 </html>
