--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Online Courses - Learn Anything, On Your Schedule | Udemy</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <nav class="nav-bar">
@@ -38,96 +38,11 @@
         <div class="courses-preview-header">
             <h1>A broad selection of courses</h1>
             <h3>Choose from 204,000 online video courses with new additions published every month</h3>
-            <div class = "courses-list">
-                <div class="courses-description hidden-small">
-                    <h4>Expand your career opportunities with Python</h4>
-                    <p>
-                        Take one of Udemy’s range of Python courses and learn how to code using this 
-                        incredibly useful language. Its simple syntax and readability makes Python 
-                        perfect for Flask, Django, data science, and machine learning. You’ll learn how 
-                        to build everything from games to sites to apps. Choose from a range of courses 
-                        that will appeal to...
-                    </p>
-                </div>
-                <button class="explore-btn hidden-small" type="button">Explore Python</button>
-                <div class="courses-carousel">
-                    <div class="course-card">
-                        <img class="course-img" src="https://img-c.udemycdn.com/course/240x135/394676_ce3d_5.jpg" alt="Learn Python: The Complete Python Programming Course">
-                        <p class="course-title">Learn Python: The Complete Python Programming Course</p>
-                        <p class="course-author">Avinash Jain, The Codex</p>
-                        <div calss="course-rating">
-                            <span class="course-rate">4.4</span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star-half-full checked"></span>
-                            <span class="course-audience">(2,916)</span>
-                        </div>
-                        <span class="course-price">E£679.99</span>
-                    </div>
-                    <div class="course-card">
-                        <img calss="course-img" src="https://img-c.udemycdn.com/course/240x135/396876_cc92_7.jpg" alt="Learning Python for Data Analysis and Visualization">
-                        <p class="course-title">Learning Python for Data Analysis and Visualization</p>
-                        <p class="course-author">Jose Portilla</p>
-                        <div calss="course-rating">
-                            <span class="course-rate">4.4</span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star-half-full checked"></span>
-                            <span class="course-audience">(17,984)</span>
-                        </div>
-                        <span class="course-price">E£1,599.99</span>
-                    </div>
-                    <div class="course-card">
-                        <img class="course-img" src="https://img-c.udemycdn.com/course/240x135/405878_e5a0_3.jpg" alt="Python for Beginners - Learn Programming from scratch">
-                        <p class="course-title">Python for Beginners - Learn Programming from scratch</p>
-                        <p class="course-author">Edwin Diaz, Coding Faculty Solutions</p>
-                        <div calss="course-rating">
-                            <span class="course-rate">4.4</span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star-half-full checked"></span>
-                            <span class="course-audience">(17,666)</span>
-                        </div>
-                        <span class="course-price">E£679.99</span>
-                    </div>
-                    <div class="course-card">
-                        <img class="course-img" src="https://img-c.udemycdn.com/course/240x135/426570_1b91_3.jpg" alt="Learn Python: Python for Beginners">
-                        <p class="course-title">Learn Python: Python for Beginners</p>
-                        <p class="course-author">Abrar Hussain</p>
-                        <div calss="course-rating">
-                            <span class="course-rate">4.3</span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star-half-full checked"></span>
-                            <span class="course-audience">(2,7667)</span>
-                        </div>
-                        <span class="course-price">E£319.99</span>
-                    </div>
-                    <div class="course-card">
-                        <img class="course-img" src="https://img-c.udemycdn.com/course/240x135/449532_2aa9_7.jpg" alt="Python Beyond the Basics - Object-Oriented Programming">
-                        <p class="course-title">Python Beyond the Basics - Object-Oriented Programming</p>
-                        <p class="course-author">Infinite Skills</p>
-                        <div calss="course-rating">
-                            <span class="course-rate">4.4</span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star-half-full checked"></span>
-                            <span class="course-audience">(2,929)</span>
-                        </div>
-                        <span class="course-price">E£519.99</span>
-                    </div>
-                </div>
-            </div>
+        </div>
+        <div class = "courses-list">
+            <div class="courses-description hidden-small"></div>
+            <button class="explore-btn hidden-small" type="button"></button>
+            <div class="courses-carousel"></div>
         </div>
     </section>
     <footer>
@@ -159,6 +74,7 @@
             <p>&copy; 2022 Udemy, Inc.</p>
         </div>
     </footer>
+    <script src="scripts/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
