feat: rating system is working now
refactor: refactoring code

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h3>Choose from 204,000 online video courses with new additions published every month</h3>
         </div>
         <div class = "courses-list">
-            <div class="courses-description hidden-small"></div>
+            <div class="courses-info hidden-small"></div>
             <button class="explore-btn hidden-small" type="button"></button>
             <div class="courses-carousel"></div>
         </div>
